complete/src/deploy/aws/security-groups.json
{
    "SecurityGroups": [
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Enable HTTPS access via port 443", 
            "Tags": [
                {
                    "Value": "cloud-former-template", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:eu-west-2:751191391887:stack/cloud-former-template/86519c50-0c28-11e7-946e-5081eddf44fe", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "WebServerSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "cloud-former-template-WebServerSecurityGroup-13FQJY5K6W8CU", 
            "VpcId": "vpc-c521f7ac", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-dadf74b3"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "751191391887", 
                            "GroupId": "sg-08bf6861"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-392eea50", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-08bf6861"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "751191391887", 
                            "GroupId": "sg-1edf7477"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-e121f788", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-1edf7477"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "751191391887", 
                            "GroupId": "sg-c4df74ad"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-c521f7ac", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-c4df74ad"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "only allow my home pc access", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:eu-west-2:751191391887:stack/ec2-lb-spring-rest-data/49467970-0c28-11e7-8131-504dcd6bf9fe", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "ec2-lb-spring-rest-data", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "sgmypconlysg", 
                    "Key": "aws:cloudformation:logical-id"
                }
            ], 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "82.10.149.166/32"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "ec2-lb-spring-rest-data-sgmypconlysg-4BEWUN9C0Z6O", 
            "VpcId": "vpc-e121f788", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-e1df7488"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Load balancer security group", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:eu-west-2:751191391887:stack/ec2-lb-spring-rest-data/49467970-0c28-11e7-8131-504dcd6bf9fe", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "sgtestec2london2lbsg", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "ec2-lb-spring-rest-data", 
                    "Key": "aws:cloudformation:stack-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "82.10.149.166/32"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "ec2-lb-spring-rest-data-sgtestec2london2lbsg-1LDSBX5MSRLHI", 
            "VpcId": "vpc-e121f788", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-e0df7489"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "allows load balancer to access EC2 instances ", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:eu-west-2:751191391887:stack/ec2-lb-spring-rest-data/49467970-0c28-11e7-8131-504dcd6bf9fe", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "sgtestec2london2lbsourcesg", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "ec2-lb-spring-rest-data", 
                    "Key": "aws:cloudformation:stack-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "751191391887", 
                            "GroupId": "sg-e0df7489"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "ec2-lb-spring-rest-data-sgtestec2london2lbsourcesg-1A57ASLKUV31E", 
            "VpcId": "vpc-e121f788", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-e3df748a"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "only allow my home pc access", 
            "Tags": [
                {
                    "Value": "USE limits public access to my IP", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "82.10.149.166/32"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "my-pc-only-sg", 
            "VpcId": "vpc-392eea50", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-962d84ff"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Load balancer security group", 
            "Tags": [
                {
                    "Value": "USE limit lb access to my IP", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "82.10.149.166/32"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "test-ec2-london-2-lb-sg", 
            "VpcId": "vpc-392eea50", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-e5e54e8c"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "allows load balancer to access EC2 instances ", 
            "Tags": [
                {
                    "Value": "USE lb access to EC2 subnets", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "751191391887", 
                            "GroupId": "sg-e5e54e8c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "test-ec2-london-2-lb-source-sg", 
            "VpcId": "vpc-392eea50", 
            "OwnerId": "751191391887", 
            "GroupId": "sg-69fb5000"
        }
    ]
}
